Fix ul margin on small screens

--- a/_sass/precice/_main.scss
+++ b/_sass/precice/_main.scss
@@ -6,9 +6,6 @@ main {
         height:1.5em;
     }
 
-    ul {
-        margin-left: 0
-    }
     @include breakpoint(medium) {
         ul {
             margin-left: $list-side-margin;
